# image-placeholder-generator-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  imageplaceholdergenerator_sdk.py  imageplaceholdergenerator_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  response.py  spec.py
py/entity/: generate_custom_placeholder_entity.py  generate_rectangular_placeholder_entity.py  generate_square_placeholder_entity.py
py/feature/: base_feature.py  clienttrack_feature.py  netsim_feature.py  paging_feature.py  proxy_feature.py  ratelimit_feature.py  streaming_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_exists.py  test_feature.py  test_generate_custom_placeholder_direct.py  test_generate_custom_placeholder_entity.py  test_generate_rectangular_placeholder_direct.py  test_generate_rectangular_placeholder_entity.py  test_generate_square_placeholder_direct.py  test_generate_square_placeholder_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  done.py  feature_add.py  feature_hook.py  make_context.py  make_error.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  param.py  prepare_auth.py  prepare_body.py  prepare_method.py  prepare_params.py  prepare_query.py  result_body.py  result_headers.py  transform_request.py
(+479 files in other folders)
